# musicbrainzkg

./: README.md  config.py  download.py  embedding_infer_genre.py  entities.py  graph.py  logical_infer_genre.py  main.py  neo4j_conn.py  pyproject.toml
dataset/: .gitignore  artists.json  genres.json
output/: .gitignore
output/ComplEx_2026-06-11_12-22-27/: results.json
output/DistMult_2026-06-10_16-43-04/: results.json
output/DistMult_2026-06-10_23-12-01/: results.json
output/DistMult_2026-06-11_00-31-12_ARTIST_OF_REMOVED/: results.json
output/DistMult_2026-06-11_00-42-23_HAS_RELEASE_REMOVED/: results.json
output/DistMult_2026-06-11_00-58-33_HAS_RECORDING_REMOVED/: results.json
output/DistMult_2026-06-11_01-05-14_ARTIST_OF_HAS_RECORDING_REMOVED/: results.json
output/MuRE_2026-06-11_01-32-08/: results.json
output/PairRE_2026-06-11_14-56-00/: results.json
output/QuatE_2026-06-11_15-21-46/: results.json
output/RotatE_2026-06-10_23-52-37/: results.json
output/TransE_2026-06-10_16-28-51/: results.json
output/TransE_2026-06-10_23-08-33/: results.json
output/TransE_2026-06-12_21-41-10_LARGE_DATASET/: results.json
