[project]
name = "musicbrainzkg"
version = "0.1.0"
description = "MusicBrainz Knowledge Graph Project for the Knowledge Graphs lecture 192.194 https://kg.dbai.tuwien.ac.at/kg-course/"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "mbzero>=0.5",
    "neo4j>=6.2.0",
    "pandas>=3.0.3",
    "pykeen>=1.11.1",
]
